# coolprop-vrvdata-analysis

./: CLAUDE.md  pyproject.toml
data/Esprit/RXYP615FC/: RXYP615FC_circuit.yml
notebooks/: CoolPropTest.ipynb  Plot_Esprit_615FC.ipynb  Plot_RQYP224FC.ipynb
notebooks/.ipynb_checkpoints/: CoolPropTest-checkpoint.ipynb
src/: ph-diagram_cheker.py  ph-diagram_interactive_Esprit.py  ph_diagram_gauss_335FC.py
