[project]
name = "coolprop-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "hajime ikeda",email = "hajime.ikeda@jdsc.ai"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coolprop (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.5,<5.0.0)",
    "pandas (<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyterlab-code-formatter (>=3.0.3,<4.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "streamlit (>=1.55.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "coolprop_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
